# enard

./: Cargo.toml  LICENSE  README.md  format.md
.github/workflows/: release.yml  rust.yml
cli/: Cargo.toml  README.md  release.sh
cli/src/: main.rs
enard/: Cargo.toml
enard/src/: chacha.rs  cipher_factory.rs  core.rs  error.rs  varint.rs
src/: cipher_factory.rs  core.rs  dyn_cipher.rs  lib.rs  nothing_cipher.rs  stream.rs
