[package]
name = "enard-cli"
version = "0.1.0"
edition = "2021"
authors = ["bindernews"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enard = { path = "..", features = ["random"] }
clap = { version = "3.2", features = ["derive", "cargo"] }
atty = "0.2"
log = "0.4"
env_logger = "0.9"
zeroize = "1.5"
anyhow = "1.0"
tempfile = "3.3"
rand = "0.8"
