[package]
name = "enard"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Implementation of the enard container format"
repository = "https://github.com/bindernews/enard"
authors = ["bindernews"]
keywords = ["crypto", "stream-cipher", "container"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["chacha"]
chacha = ["chacha20"]
random = ["rand"]

[dependencies]
thiserror = "1.0"
delegate = "0.7"
byteorder = "1.4"
subtle = "2.4"
cipher = "0.4"
crypto-common = "0.1"
zeroize = "1.5"
rand = { version = "0.8", optional = true, default-features = false }
chacha20 = { version = "0.9", optional = true }
sha2 = { version = "0.10" }
digest = { version = "0.10", features = ["mac", "core-api", "std"] }
hmac = { version = "0.12", features = ["reset"] }
